--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
   crossorigin=""/>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style2.css">
+  <link rel="stylesheet" type="text/css" href="static2/css/style2.css">
 </head>
 <body>
 
@@ -24,8 +24,8 @@
   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
   crossorigin=""></script>
   <!-- D3 JavaScript -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic2.js"></script>
+  <script type="text/javascript" src="static2/js/logic2.js"></script>
 </body>
 </html>
